tup/parse/testdata/error/review/function_declarations.tup
# missing function body
add = fn(x: Int, y: Int) Int

/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:29: error: expecting "function body", got ""

# missing return type for fn
add = fn(x: Int, y: Int) {
    x + y
}

/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:26: error: expecting "return type or _", got "{"

# unclosed parameter list
add = fn(x: Int, y: Int {
    x + y
}

/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:3:2: error: expecting ")", got ""

# function body missing closing brace
add = fn(x: Int, y: Int) Int {
    x + y

/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:2:10: error: expecting "}", got ""
